# internal/models/story.go
@@ -14,7 +14,6 @@ type Story struct {
 	Audio         File      `gorm:"foreignKey:AudioID;constraint:OnUpdate:CASCADE,OnDelete:SET NULL;" json:"audio"`
 	ImageID       *uint64   `json:"-"`
 	Image         *File     `gorm:"foreignKey:ImageID;constraint:OnUpdate:CASCADE,OnDelete:SET NULL;" json:"image"`
-	IsPublished   bool      `gorm:"index" json:"is_published"`
 	LikesCount    int       `json:"likes_count"`
 	CommentsCount int       `json:"comments_count"`
 	CreatedAt     time.Time `json:"created_at"`
